# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  python_ci.yml
brain_games/: __init__.py  cli.py  starter.py
brain_games/games/: calc.py  even.py  game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py  gcd.py  prime.py  progression.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
